# pOS-design-system

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  esbuild.config.js  package-lock.json  package.json  server.js  web-test-runner.config.js
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: .env.example  docker-compose.yml
backend/gateway/: Dockerfile  requirements.txt
backend/mcp-server/: Dockerfile  server.py  server_sse.py
backend/shared/: pyproject.toml
backend/shared/migrations/: alembic.ini  env.py
backend/shared/migrations/versions/: 001_create_shared_tags.py
backend/shared/pos_common/: __init__.py  auth.py  config.py  database.py  events.py  exceptions.py  schemas.py
backend/shared/pos_contracts/: pyproject.toml
backend/shared/pos_contracts/pos_contracts/: __init__.py  config.py  exceptions.py  logging.py  models.py  schemas.py  tag_service.py
backend/shared/pos_events/: pyproject.toml
backend/shared/pos_events/pos_events/: __init__.py  base.py  bus.py  rabbitmq.py  transport.py
design-system/: package-lock.json  package.json
design-system/examples/: index.html
design-system/src/: index.js
design-system/test/: ui-alert.test.js  ui-app-layout.test.js  ui-badge.test.js  ui-card.test.js  ui-checkbox.test.js  ui-dialog.test.js  ui-icon.test.js  ui-input.test.js  ui-nav-item.test.js  ui-progress.test.js  ui-radio.test.js  ui-side-panel.test.js  ui-tag.test.js
design-system/tokens/: build-tokens.js
docs/: PROJECT_REQUIREMENTS.md  deployment-guide.md  google-photos-setup.md  session-log-2026-03-05-phase1-implementation.md  session-log-2026-03-14-notes-module-and-architecture.md  session-log-2026-03-24-watchlist-and-architecture.md  vision.md
examples/: index.html  showcase.html
examples/plugins/: hello-plugin.js
frontend/: build-editor.js  package-lock.json  package.json  server.js  sw.js
openspec/: config.yaml
src/: index.js
test/: ui-button.test.js  ui-divider.test.js  ui-select.test.js  ui-spinner.test.js  ui-textarea.test.js  ui-toggle.test.js  ui-tooltip.test.js
tokens/: build-tokens.js
(+606 files in other folders)
